@@ -540,8 +540,8 @@ STM3210E-EVAL-specific Configuration Options
     CONFIG_STM32_SPI1_REMAP
     CONFIG_STM32_SPI3_REMAP
     CONFIG_STM32_I2C1_REMAP
-    CONFIG_STM32_CAN1_FULL_REMAP
-    CONFIG_STM32_CAN1_PARTIAL_REMAP
+    CONFIG_STM32_CAN1_REMAP1
+    CONFIG_STM32_CAN1_REMAP2
     CONFIG_STM32_CAN2_REMAP
 
   JTAG Enable settings (by default JTAG-DP and SW-DP are disabled):
